--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Environment variables
+.env
+.env.local
+.env.*.local
+.env.shared
+
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+dist-ssr/
+*.local
+
 # Logs
 logs
 *.log
@@ -6,11 +20,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
 
 # Editor directories and files
 .vscode/*
@@ -23,7 +32,6 @@ dist-ssr
 *.sln
 *.sw?
 
-# Environment files
-.env
-.env.local
-.env.*.local
+# OS files
+.DS_Store
+Thumbs.db
