chore(security): fortify gitignore and setup environment templates
- Remove sensitive .env files from git tracking (git rm --cached)
- Add comprehensive root and app-level .gitignore files
- Create environment variable templates (.example files)
- Add SETUP.md for environment initialization guide
- Add COLLABORATOR_PROMPT.md for AI-pair programming guidance

--- a/.env.shared.example
+++ b/.env.shared.example
@@ -1,10 +1,10 @@
-# MapTiler API Key
-# Get your API key from: https://cloud.maptiler.com/account/keys/
+# Shared keys for both apps
+
+# MapTiler Key for map rendering
 VITE_MAPTILER_KEY=your_maptiler_key_here
 
 # Supabase Configuration
-# Get these values from your Supabase project settings
-VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_URL=your_supabase_url_here
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 VITE_SUPABASE_PUBLISHABLE_KEY=your_supabase_publishable_key_here
-VITE_SUPABASE_PROJECT_ID=your_project_id_here
+VITE_SUPABASE_PROJECT_ID=your_supabase_project_id_here
