--- a/apps/city-trail-lp/.env.local.example
+++ b/apps/city-trail-lp/.env.local.example
@@ -1,12 +1,11 @@
-# MapTiler API Key
-VITE_MAPTILER_KEY=your_maptiler_key_here
+# Google Maps API Key
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
 # Supabase Configuration
-VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_URL=your_supabase_url_here
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 VITE_SUPABASE_PUBLISHABLE_KEY=your_supabase_publishable_key_here
-VITE_SUPABASE_PROJECT_ID=your_project_id_here
+VITE_SUPABASE_PROJECT_ID=your_supabase_project_id_here
 
-# Google Maps API Key
-# Get your API key from: https://console.cloud.google.com/apis/credentials
-VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+# MapTiler Key
+VITE_MAPTILER_KEY=your_maptiler_key_here
