--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -1,9 +1,9 @@
 # Supabase Configuration
-VITE_SUPABASE_PROJECT_ID=your_project_id_here
+VITE_SUPABASE_PROJECT_ID=your_supabase_project_id_here
 VITE_SUPABASE_PUBLISHABLE_KEY=your_supabase_publishable_key_here
-VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_URL=your_supabase_url_here
 
-# MapTiler API Key
+# MapTiler Key
 VITE_MAPTILER_KEY=your_maptiler_key_here
 
 # Google Maps API Key
