--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-# Gemini API Key
-# Get your API key from: https://makersuite.google.com/app/apikey
+# Gemini API Key for AI features
 GEMINI_API_KEY=your_gemini_api_key_here
