fix: Difyワークフロー座標マッチング改善
- CODE_出力結合: spot_idとspot_nameの両方でマッチング
- lat/lngを確実に数値（float）として渡す
- マッチング率をメタデータに記録
- pipeline_version: 2.2.0-dify

--- a/apps/city-trail-lp/dify/workflow.yml
+++ b/apps/city-trail-lp/dify/workflow.yml
@@ -1589,13 +1589,21 @@ workflow:
           \ = json.loads(spot_scenes_json)\n        meta_puzzle = json.loads(meta_puzzle_json)\n\
           \        optimized_spots = json.loads(optimized_spots_json)\n    except:\n\
           \        return {\n            \"output_json\": \"{}\",\n            \"\
-          error\": \"JSONパースに失敗しました\"\n        }\n    \n    # スポットシーンに座標を追加\n    for\
-          \ scene in spot_scenes:\n        spot_id = scene.get('spot_id')\n      \
-          \  for spot in optimized_spots:\n            if spot.get('spot_id') == spot_id:\n\
-          \                scene['lat'] = spot.get('lat')\n                scene['lng']\
-          \ = spot.get('lng')\n                scene['place_id'] = spot.get('place_id',\
-          \ '')\n                scene['address'] = spot.get('address', '')\n    \
-          \            break\n    \n    # creator_payload構築\n    creator_payload =\
+          error\": \"JSONパースに失敗しました\"\n        }\n    \n    # optimized_spotsを複数キーでインデックス化\n    \
+          spots_by_id = {}\n    spots_by_name = {}\n    for i, spot in enumerate(optimized_spots):\n        \
+          sid = spot.get('spot_id', f'S{i+1}')\n        name = spot.get('name', '')\n        \
+          spots_by_id[sid] = spot\n        if name:\n            spots_by_name[name] = spot\n    \n    # スポットシーンに座標を追加（数値として確保）\n    \
+          matched_count = 0\n    for scene in spot_scenes:\n        spot_id = scene.get('spot_id', '')\n        \
+          spot_name = scene.get('spot_name', '')\n        matched_spot = None\n        \n        \
+          # 優先順位1: spot_idでマッチング\n        if spot_id in spots_by_id:\n            \
+          matched_spot = spots_by_id[spot_id]\n        # 優先順位2: spot_nameでマッチング\n        \
+          elif spot_name in spots_by_name:\n            matched_spot = spots_by_name[spot_name]\n        \n        \
+          if matched_spot:\n            matched_count += 1\n            lat = matched_spot.get('lat', 0)\n            \
+          lng = matched_spot.get('lng', 0)\n            scene['lat'] = float(lat) if lat else 0.0\n            \
+          scene['lng'] = float(lng) if lng else 0.0\n            scene['place_id'] = matched_spot.get('place_id', '')\n            \
+          scene['address'] = matched_spot.get('address', '')\n        else:\n            \
+          # フォールバック：座標がない場合は0を設定\n            scene['lat'] = float(scene.get('lat', 0)) if scene.get('lat') else 0.0\n            \
+          scene['lng'] = float(scene.get('lng', 0)) if scene.get('lng') else 0.0\n    \n    # creator_payload構築\n    creator_payload =\
           \ {\n        \"quest_id\": f\"quest-{int(datetime.now().timestamp())}\"\
           ,\n        \"quest_title\": quest_title,\n        \"main_plot\": {\n   \
           \         \"premise\": premise,\n            \"goal\": goal,\n         \
@@ -1603,9 +1611,10 @@ workflow:
           : final_reveal\n        },\n        \"spots\": spot_scenes,\n        \"\
           meta_puzzle\": meta_puzzle,\n        \"generation_metadata\": {\n      \
           \      \"generated_at\": datetime.now().isoformat(),\n            \"pipeline_version\"\
-          : \"2.0.0-dify\",\n            \"validation_passed\": validation_passed,\n\
-          \            \"quality_score\": quality_score\n        }\n    }\n    \n\
-          \    # 最終出力\n    output = {\n        \"player_preview\": player_preview,\n\
+          : \"2.2.0-dify\",\n            \"validation_passed\": validation_passed,\n\
+          \            \"quality_score\": quality_score,\n            \"spots_count\": len(spot_scenes),\n\
+          \            \"coords_matched\": matched_count,\n            \"coords_match_rate\": round(matched_count / len(spot_scenes) * 100, 1) if spot_scenes else 0\n\
+          \        }\n    }\n    \n    # 最終出力\n    output = {\n        \"player_preview\": player_preview,\n\
           \        \"creator_payload\": creator_payload\n    }\n    \n    return {\n\
           \        \"output_json\": json.dumps(output, ensure_ascii=False, indent=2)\n\
           \    }"
